Add description to old post
But really just triggering a build.

--- a/_posts/archived/2015/2015-12-31-a-haackedy-2015.markdown
+++ b/_posts/archived/2015/2015-12-31-a-haackedy-2015.markdown
@@ -1,5 +1,6 @@
 ---
 title: "A haackedy 2015"
+description: "A look back at 2015 and the things I did and the things I wrote about."
 tags: [personal,meta]
 ---
 
