Use the full this is fine comic

--- a/_posts/2020/2020-01-23-burnout.markdown
+++ b/_posts/2020/2020-01-23-burnout.markdown
@@ -17,7 +17,11 @@ A common image associated with burnout is a candle burning at both ends. While l
 
 ![Image of candle burning from both ends](https://user-images.githubusercontent.com/19977/73021437-7566eb00-3ddc-11ea-91f2-619d688f7a61.jpg "Flickr image by frankieleon CC BY 2.0")
 
-Perhaps a better image for burnout is a tire fire, though I like the full ["This is Fine" comic](http://gunshowcomic.com/648) from the popular meme. Because of my mistaken belief, I ignored all the signs around me while convincing myself "This is fine."
+Perhaps a better image for burnout is a tire fire. Or even better, the full comic from the famous ["This is Fine" meme](http://gunshowcomic.com/648) by KC Green (used with permission).
+
+[![Comic with a dog sitting in a room on fire thinking everything is fine.](https://user-images.githubusercontent.com/19977/73892704-76f8d000-482c-11ea-9cdd-570127f89248.png "Gunshow - On Fire comic by KC Green")](http://gunshowcomic.com/648)
+
+Because of my mistaken belief, I ignored all the signs around me while convincing myself "This is fine."
 
 [This Forbes post](https://www.forbes.com/sites/johnrampton/2015/05/13/the-6-causes-of-professional-burnout-and-how-to-avoid-them/) notes six causes of burnout...
 
